--- a/locale/de_CH.UTF-8/LC_MESSAGES/ZurichMobileApp.po
+++ b/locale/de_CH.UTF-8/LC_MESSAGES/ZurichMobileApp.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: struan@mysociety.org\n"
 "POT-Creation-Date: 2013-02-06 12:16+0000\n"
-"PO-Revision-Date: 2013-02-04 15:27+0100\n"
+"PO-Revision-Date: 2013-02-06 17:09+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <team@fixmystreet.com>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -31,11 +30,11 @@ msgstr "Über diese App"
 
 #: templates/details.html:3
 msgid "Add Details"
-msgstr "Beschreiben Sie den Mangel"
+msgstr "Details"
 
 #: templates/photo.html:15
 msgid "Add Existing Photo"
-msgstr ""
+msgstr "Foto hochladen"
 
 #: templates/photo.html:3
 msgid "Add a Photo"
@@ -57,7 +56,7 @@ msgstr "Weiter ohne Photo"
 
 #: templates/strings.js:8
 msgid "Could not check your location"
-msgstr "Ordung fehlgeschlagen"
+msgstr "Ortung fehlgeschlagen"
 
 #: templates/strings.js:9
 msgid "Could not determine your location"
@@ -81,7 +80,7 @@ msgstr "E-Mail Adresse"
 
 #: templates/around.html:30
 msgid "Enter a Z&uuml;rich street name"
-msgstr "Ungef&auml;hre Adresse des Mangels"
+msgstr "Ungefähre Adresse des Mangels"
 
 #: templates/details.html:20
 msgid "Enter details of the problem"
@@ -89,7 +88,7 @@ msgstr "Beschreiben Sie den Mangel."
 
 #: templates/welcome.html:9
 msgid "Fill out your details to get started reporting problems"
-msgstr "Geben Sie Ihre Kontaktdaten an um Mängel melden zu können"
+msgstr "Geben Sie Ihre Kontaktdaten an um Mängel melden zu können."
 
 #: templates/help.html:3 templates/settings.html:15
 msgid "Help"
@@ -105,8 +104,7 @@ msgid ""
 "check your bulk/spam mail folders: sometimes, our messages are marked that "
 "way."
 msgstr ""
-"Falls Sie kein E-Mail erhalten, &uuml;berpr&uuml;fend Sie bitte Ihren Spam-"
-"Ordner."
+"Falls Sie kein E-Mail erhalten, überprüfen Sie bitte Ihren Spam-Ordner."
 
 #: templates/strings.js:12
 msgid "Invalid email"
@@ -158,7 +156,7 @@ msgstr "Ungefähre Adresse de Mangels"
 
 #: templates/privacy.html:3 templates/settings.html:27
 msgid "Privacy Policy"
-msgstr "Privacy Policy"
+msgstr "Disclaimer"
 
 #: templates/photo.html:12
 msgid "Remove Photo"
@@ -194,7 +192,7 @@ msgstr "Sync Fehler"
 
 #: templates/photo.html:11
 msgid "Take Photo"
-msgstr ""
+msgstr "Neues Foto machen"
 
 #: templates/strings.js:3
 msgid "There was a problem looking up your location"
@@ -208,7 +206,7 @@ msgstr ""
 
 #: templates/strings.js:13
 msgid "There was a problem taking your photo"
-msgstr ""
+msgstr "Fehler bei Foto"
 
 #: templates/photo.html:22
 msgid "Use photo"
