translate user details and use as nav item on settings screen

--- a/locale/de_CH.UTF-8/LC_MESSAGES/ZurichMobileApp.po
+++ b/locale/de_CH.UTF-8/LC_MESSAGES/ZurichMobileApp.po
@@ -229,7 +229,7 @@ msgstr "Hier erfassen"
 
 #: templates/user.html:3
 msgid "User details"
-msgstr "User Details"
+msgstr "Benutzerdaten"
 
 #: templates/welcome.html:2
 msgid "Welcome to"
